# delta

./: .gitignore  README.md  build.gradle  config.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/org/byteam/sample/: DexPathListInfoTest.java  ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/byteam/sample/: App.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/org/byteam/sample/: ExampleUnitTest.java
buildSrc/: build.gradle  publish.gradle
buildSrc/src/main/groovy/org/byteam/delta/: AppInfoTemplate.groovy  DeltaPlugin.groovy
buildSrc/src/main/resources/bsdiff/: bsdiff-linux
delta/: build.gradle  proguard-rules.pro  publish.gradle
delta-patch/: CMakeLists.txt  README.md  build.gradle
delta-patch/src/main/java/org/byteam/delta/patch/: DeltaPatch.java
delta-patch/src/main/jni/: Android.mk  delta_patch.c
delta-patch/src/main/jni/bzip2/: bzip2.c  bzip2recover.c  spewG.c
delta/src/main/: AndroidManifest.xml
delta/src/main/java/org/byteam/delta/: AppInfo.java  BootstrapApplication.java  Delta.java  DexExtractor.java  Extractor.java  FileManager.java  FileUtils.java  HashUtils.java  IOUtils.java  IncrementalClassLoader.java  Patch.java  PatchListener.java  PatchReceiver.java  PatchService.java  Patcher.java  Paths.java
gradle/wrapper/: gradle-wrapper.properties
tp/: build.gradle  proguard-rules.pro
tp-bsdiff/: CMakeLists.txt  README.md
tp-bsdiff/src/main/jni/: tp_patch.c  tp_patch.h
tp-bsdiff/src/main/jni/bzip2/: mk251.c
tp-patch/: CMakeLists.txt  build.gradle
tp-patch/src/main/: AndroidManifest.xml
tp-patch/src/main/cpp/: bspatch.c  tp_patch.c  tp_patch.h
tp-patch/src/main/cpp/bzip2/: bzip2.c  mk251.c  spewG.c  unzcrash.c
tp-patch/src/main/jni/: Android.mk  bsdiff.c  bspatch.c
tp-patch/src/main/jni/bzip2/: unzcrash.c
tp/src/main/: AndroidManifest.xml
tp/src/main/java/org/byteam/tp/: DexExtractor.java  Tp.java
(+39 files in other folders)
